--- a/app/composer.json
+++ b/app/composer.json
@@ -102,6 +102,7 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.0",
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "escapestudios/symfony2-coding-standard": "^3.13",
         "fakerphp/faker": "^1.23",
